--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <body>
 
-Olá, Xavier. Estou sendo filmado. *____*
+  Olá, Lucas Xavie. Bem-vindo ao Compare.
 
-<h1> Me chamo Dexter! </h1>
+<h1> Compare: Seu Makertplace do dia a dia </h1>
 
 </body>
 </html>
