--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-  Olá, Lucas Xavie. Bem-vindo ao Compare.
+  Olá, Lucas Xavier. Bem-vindo ao Compare.
 
 <h1> Compare: Seu Makertplace do dia a dia </h1>
 
