--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <html>
-
 <body>
 
 Olá, Xavier. Estou sendo filmado. *____*
 
-
-<h1> Me chamo Dexter! Como você está hoje? </h1>
-<p> O que deseja, Usuário?? </p>
-
-
+<h1> Me chamo Dexter! </h1>
 
 </body>
 </html>
