commit after tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   Olá, Lucas Xavier. Bem-vindo ao Compare.
 
-<h1> Compare: Seu Makertplace do dia a dia </h1>
-
+<h1> Compare: Seu Makertplace do dia a dia </h>
+<p>	O COMPARE é a melhor maneira de você obter os melhores preços, nos melhores estabelecimentos da sua localidade</p>
 </body>
 </html>
