att.1 on branch feature

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <body>
 
-  Olá, Lucas Xavier. Bem-vindo ao Compare.
+ <h1> Olá, Lucas Xavier. Bem-vindo ao Compare. </h1> 
 
-<h1> Compare: Seu Makertplace do dia a dia </h>
+<h2> Compare: Seu Makertplace do dia a dia </h2>
 <p>	O COMPARE é a melhor maneira de você obter os melhores preços, nos melhores estabelecimentos da sua localidade</p>
 </body>
 </html>
