commit 1 da branch b

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <body>
+ 
+commit1
+  commit da branch B
+ 
  <h1> Olá, Lucas Xavier. Bem-vindo ao Compare. </h1> 
 
 <h2> Compare: Seu Makertplace do dia a dia </h2>
