pagina de login

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 	estado final da branch, pronto para continuar.
+	código guardado
  
  <h1> Olá, Lucas Xavier. Bem-vindo ao Compare. </h1> 
 
