--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 	estado final da branch, pronto para continuar.
+	teste do git flow
  	<h3> COMPARE, COMPARE!</h3>
  <h1> Olá, Lucas Xavier. Bem-vindo ao Compare. </h1> 
 
