--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-	estado final da branch, pronto para continuar.
+	adicionando gitflow
  	<h3> COMPARE, COMPARE!</h3>
  <h1> Olá, Lucas Xavier. Bem-vindo ao Compare. </h1> 
 
