--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+	modificação para release v1
 	adicionando gitflow
  	<h3> COMPARE, COMPARE!</h3>
  <h1> Olá, Lucas Xavier. Bem-vindo ao Compare. </h1> 
